# K12

./: .config  .gitignore  .gitmodules  README.md  archiso.sh  run.sh  update.sh
kadai4/: .gitignore  Makefile  lambda.c  lambda.h
kadaifuse/: Cargo.toml
kadaifuse/src/: main.rs
lambdac/: Cargo.toml
lambdac/example/: alpha.lisp  fib.lisp
lambdac/src/: alpha.rs  grammar.lalrpop  lib.rs  main.rs  parser.rs
report/: .gitignore  Makefile  log.diff  report.saty
test_codes/: chown.c  kernel_land_caesar_encryption.c
vm/: archiso.sh  create.sh  freebsdiso.sh  iso-freebsd.sh  iso-linux.sh  load-dev.sh  run-freebsd.sh  run-linux.sh  run.sh
