[package]
name = "kadaifuse"
version = "0.1.0"
authors = ["Nakano Masaki <namachan10777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse3 = { version="0.1.0-beta1.3", features = ["async-std-runtime", "unprivileged"] }
async-trait = "0.1"
libc = "0.2"
async-std = { version="1.6.2", features = ["attributes"] }
pretty_env_logger = "0.4.0"
log = "0.4.11"
futures-util = "0.3.5"
mio = { version = "0.7.0", features = ["os-poll", "os-util"] }
tempfile = "3.1.0"
clap = "2.33.1"
env_logger = "0.7.1"
imap = "2.2.0"
native-tls = "0.2.4"
charset = "0.1.2"
base64 = "0.12.3"
bincode = "1.3.1"
byteorder = "1.3.4"
